package tandraym.edu.airportdemo.cosmere.dto;

public record SkillDto(int rank, Integer modOverride, int modBonus, boolean unlocked) {}
